jQ 3 -> 2, new pages for rules & policy

--- a/_header.html
+++ b/_header.html
@@ -103,8 +103,8 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">О нас <span class="caret"></span></a>
 								<ul class="dropdown-menu">
 									<li><a href="about.html">О DarkSlot</a></li>
-									<li><a href="#" class="main-nav__dropdown-rules" data-toggle="modal" data-target="#modalRules">Положения и условия</a></li>
-									<li><a href="#" class="main-nav__dropdown-policy" data-toggle="modal" data-target="#modalPolicy">Политика конфиденциальности</a></li>
+									<li><a href="rules.html">Положения и условия</a></li>
+									<li><a href="policy.html">Политика конфиденциальности</a></li>
 								</ul>
 							</li>
 						</ul>
@@ -156,8 +156,6 @@
 							</form>
 						</ul>
 					</div>
-
-
 			</div>
 		</div>
 	</nav>
