--- a/policy.html
+++ b/policy.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<title>Dark Slot</title>
 	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
-
 	<link rel="stylesheet" href="assets/css/bootstrap.css">
 	<link rel="stylesheet" href="assets/css/main.css">
 
@@ -18,163 +17,40 @@
 	<!-- Header insertion -->
 	<script>
 		$(document).ready(function(){
-		 	$('#ds-header').load('./_header.html');
+			$('#ds-header').load('./_header.html');
 		});
 	</script>
 	<div id="ds-header"></div>
 	<!-- End Header insertion -->
 
 	<div class="main-wrapper">
-		<div class="greeting-bonus">
-			<div class="container">
 
-				<div class="row">
-					<div class="col-sm-12 text-center">
-						<h2 class="greeting-bonus__header">Приветственный бонус</h2>
-						<span class="greeting-bonus__count">1800$</span>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-sm-4 col-lg-4">
-						<div class="deposit deposit--first">
-							<span class="deposit__percents">100%</span>
-							<span class="deposit__number">Первый депозит</span>
-							<span class="deposit__undertext">(до 600$)</span>
-						</div>
-					</div>
-
-					<div class="col-sm-4 col-lg-4">
-						<div class="deposit deposit--second">
-							<span class="deposit__percents">50%</span>
-							<span class="deposit__number">Второй депозит</span>
-							<span class="deposit__undertext">(до 600$)</span>
-						</div>
-					</div>
-
-					<div class="col-sm-4 col-lg-4">
-						<div class="deposit deposit--third">
-							<span class="deposit__percents">200%</span>
-							<span class="deposit__number">Третий депозит</span>
-							<span class="deposit__undertext">(до 600$)</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="row bonus-row">
-					<div class="col-sm-12 text-center">
-						<button class="btn btn-danger btn-wide">Получить!</button>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-sm-4">
-						<div class="condition">
-							<span class="condition__count">10$</span>
-							<span class="condition__count-description">(или эквивалент)</span>
-							<span class="condition__description">Минимальный депозит</span>
-						</div>
-					</div>
-
-					<div class="col-sm-4">
-						<div class="condition">
-							<span class="condition__count">600$</span>
-							<span class="condition__count-description">(или эквивалент)</span>
-							<span class="condition__description">Максимальный размер бонуса</span>
-						</div>
-					</div>
-
-					<div class="col-sm-4">
-						<div class="condition">
-							<span class="condition__description">Вы так же можете отказаться от бонусов в личном кабинете</span>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<h1 >Политика конфиденциальности</h1>
+					<div class="rules-wrap" id="rules-wrap">
+						
+						<div class="rules">
+							<ul class="rules__list">
+								<li class="rules__list-item">1. Игрок признает и подтверждает обоснованность действий казино DARKSLOT.com при запросе персональных данных игрока, необходимых для доступа к сайту, а также, для обеспечения игроку безопасного и максимально комфортного использования игр.</li>
+								<li class="rules__list-item">2. Казино DARKSLOT.com подтверждает, что при сборе персональных данных игрока, на казино DARKSLOT.com распространяется правовая мера "о защите персональных данных" Казино DARKSLOT.com обязано держать в сохранности личную информацию игрока, а также уважать конфиденциальность Игрока в соответствии с передовым деловым опытом и действующим законодательством.</li>
+								<li class="rules__list-item">3. Персональные данные игрока будут использоваться казино DARKSLOT.com исключительно для того, чтобы обеспечить игроку доступ к играм и проведения игроком операций, относящихся к использованию игр. Сотрудники казино DARKSLOT получают доступ к персональным данным Игрока исключительно в тех случаях, когда эта информация является необходимым условием для выполнения их служебных обязанностей.</li>
+								<li class="rules__list-item">4. Персональные данные игрока не будут переданы третьим лицам, если только подобное не является необходимым для обработки запросов игрока, связанных с использованием игр. Настоящим игрок соглашается на подобную передачу.</li>
+								<li class="rules__list-item">5. Игрок имеет право получить доступ к личной информации игрока, хранящейся в казино DARKSLOT.com, отправив запрос в письменном виде. Для принятия всех необходимых мер по обновлению персональных данных игрока, мы просим незамедлительно сообщить нам о любых изменениях в личной информации, хранящейся в казино DARKSLOT.com. В случае, если игрок считает, что информация о нём является неточной, неполной или некорректной, он вправе запросить её исправление. Кроме того, игрок имеет право запросить блокирование или удаление данных, которые были обработаны незаконно.</li>
+								<li class="rules__list-item">6. Для удобства пользования сайтом, а также для учёта посещаемости сайта и повышения качества обслуживания, казино DARKSLOT.com собирает cookie-файлы (небольшие информационные файлы), который высылает браузер игрока. Игрок может отключить сбор cookie-файлов (см. инструкции браузера о том, как это сделать), однако, нужно иметь в виду, что отключение сбора cookie-файлов может ограничить возможности игрока в использовании сайта.</li>
+								<li class="rules__list-item">7. Сайт регулярно предоставляет информацию об изменениях и/или дополнениях, о новых услугах и акциях, а также обо всём, что, по мнению сайта, может оказаться интересным и полезным для игрока. Если игрок не хочет получать новостные рассылки, он может отказаться от этой услуги в своем аккаунте.</li>
+							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-
-		<div class="cashback cashback--background" id="vip-bonus">
-			<div class="container">
-				<div class="row vip-bonus">
-					<div class="col-xs-12 col-sm-6">
-						<div class="cashback__text-wrapper">
-							<img src="img/vip-bonus-header.png" alt="" class="cashback__header">
-							<span class="cashback__text">Получите 100% бонусом при депозите 1000$</span>
-						</div>
-					</div>
-
-					<div class="col-xs-12 col-sm-offset-1 col-sm-5 text-right">
-						<div class="cashback-code">
-							<span class="cashback-code__header">Во время депозита используйте VIP-код</span>
-							<span class="cashback-code__code">VIP1000</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-xs-5 text-center">
-						<span class="cashback__not-all">Это еще не все</span>
-						<button class="btn btn-danger btn-wide">Депозит сейчас</button>
-					</div>
-
-					<div class="col-xs-6">
-						<p class="cashback__advantages">А так же вы получите <span class="cashback__red">3й уровень,</span> который даст вам массу <span class="cashback__dashed">преимуществ</span>
-							<a href="levels.html" class="cashback__question">?</a>
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="bonus-more">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-4">
-						<div class="condition">
-							<span class="condition__description">Отыгрывать бонус можно только в слотах.</span>
-						</div>
-					</div>
-
-					<div class="col-sm-4">
-						<div class="condition">
-							<span class="condition__description">Максимальная ставка при это не должна превышать 5$(300р.)</span>
-						</div>
-					</div>
-
-					<div class="col-sm-4">
-						<div class="condition">
-							<span class="condition__description">Требования по отыгрышу бонусов(вейджер) х40</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-sm-12">
-						<p class="bonus-more__text">Так же к этому предложению действуют стандартные положения и условия </p>
-					</div>
-
-					<div class="col-sm-12">
-						<div class="bonus-more__button-wrapper">
-							<button class="btn btn-danger btn-wide" data-toggle="modal" data-target="#modalRules">Узнать больше</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- Section-Registration insertion -->
-		<script>
-			$(document).ready(function(){
-			 	$('#ds-section-registration').load('./_section-registration.html');
-			});
-		</script>
-		<div id="ds-section-registration"></div>
-		<!-- End Section-Registration insertion -->
 
 		<!-- Footer-Wrapper insertion -->
 		<script>
 			$(document).ready(function(){
-			 	$('#ds-footer-wrapper').load('./_footer-wrapper.html');
+				$('#ds-footer-wrapper').load('./_footer-wrapper.html');
 			});
 		</script>
 		<div id="ds-footer-wrapper"></div>
