support page done?

--- a/support.html
+++ b/support.html
@@ -25,7 +25,18 @@
 
 	<div class="main-wrapper">
 
-		
+		<div class="container">
+			<div class="row">
+			<div class="col-xs-12 col-md-offset-2 col-md-8">
+
+				<form action="#" class="modal-form modal-form--contact">
+					<input type="email" class="modal-form__input" placeholder="Email">
+					<textarea name="textarea-contact" id="text-contact" cols="30" rows="10" class="modal-form__text-field" placeholder="Текст..."></textarea>
+					<input type="submit" class="modal-form__button" value="Отправить">
+				</form>
+			</div>
+			</div>
+		</div>
 
 		<!-- Footer-Wrapper insertion -->
 		<script>
