--- a/_section-registration.html
+++ b/_section-registration.html
@@ -31,10 +31,8 @@
             <div class="form-group">
               <input type="password" class="form-control" name="" placeholder="Пароль">
             </div>
-
-            <!-- В мини-форме регистрации (на слайдах карусели и секции с регистрацией)
-                поле "подтверждение пароля" должно появляться после клика по полю "пароль"  -->
-            <div class="form-group hidden">
+            
+            <div class="form-group">
               <input type="password" class="form-control" name="" placeholder="Подтверждение пароля">
             </div>
 
