--- a/_carousel.html
+++ b/_carousel.html
@@ -1,4 +1,4 @@
-<div id="casino-banner" class="carousel slide" data-ride="carousel">
+<div id="casino-banner" class="carousel " data-ride="carousel">
 <!-- Indicators -->
 <ol class="carousel-indicators hidden-lg">
   <li data-target="#casino-banner" data-slide-to="0" class="active"></li>
@@ -40,7 +40,7 @@
                     <div class="form-group">
                       <input type="password" class="form-control" name="" placeholder="Пароль">
                     </div>
-                    <div class="form-group hidden">
+                    <div class="form-group">
                       <input type="password" class="form-control" name="" placeholder="Подтверждение пароля">
                     </div>
 
@@ -52,6 +52,10 @@
                         <option value="dollar">Доллары</option>
                         <option value="btc">Биткоины</option>
                       </select>
+                    </div>
+
+                    <div class="form-group">
+                      <input type="text" name="bonus_code" placeholder="Бонусный код" class="form-control">
                     </div>
 
                     <div class="form-group">
