--- a/_header.html
+++ b/_header.html
@@ -93,7 +93,7 @@
 									<li><a href="levels.html">Уровни игроков</a></li>
 								</ul>
 							</li>
-							<li><a href="#" data-toggle="modal" data-target="#modalSupport">Поддержка</a></li>
+							<li><a href="support.html">Поддержка</a></li>
 							<li><a href="partners.html">Партнерам</a></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">О нас <span class="caret"></span></a>
