--- a/_collapse-bottom.html
+++ b/_collapse-bottom.html
@@ -10,7 +10,17 @@
         <form action="#" class="search">
           <input type="search" class="search__field" placeholder="Поиск">
           <div class="search__close"></div>
+
+          <div class="search-result visible">
+            <ul>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+            </ul>
+          </div>
         </form>
+
         <div class="fixed-bar__chat"><p>Онлайн-чат</p></div>
 
 
