images in search results, page for game

--- a/_collapse-bottom.html
+++ b/_collapse-bottom.html
@@ -13,10 +13,11 @@
 
           <div class="search-result visible">
             <ul>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
+              <li><div class="game-image"></div>item</li>
+              <li><div class="game-image"></div>item</li>
+              <li><div class="game-image"></div>item</li>
+              <li><div class="game-image"></div>item</li>
+
             </ul>
           </div>
         </form>
