--- a/_games-list.html
+++ b/_games-list.html
@@ -1,7 +1,9 @@
 <div class="games-list">
   <div class="row">
     <div class="col-xs-3">
-      <div class="game-item"></div>
+      <a href="game.html">
+      <div class="game-item">Посмотреть игру</div>
+      </a>
     </div>
     <div class="col-xs-3">
       <div class="game-item"></div>
