--- a/_header.html
+++ b/_header.html
@@ -155,10 +155,10 @@
 
 				<div class="search-result visible">
 						<ul>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
+              <li><div class="game-image"></div>item</li>
+              <li><div class="game-image"></div>item</li>
+              <li><div class="game-image"></div>item</li>
+              <li><div class="game-image"></div>item</li>
             </ul>
 					</div>
 			</div>
