--- a/_carousel.html
+++ b/_carousel.html
@@ -1,12 +1,12 @@
-<div id="casino-banner" class="carousel " data-ride="carousel">
+<div id="casino-banner" class="carousel slide" data-ride="carousel">
 <!-- Indicators -->
-<ol class="carousel-indicators hidden-lg">
+<!-- <ol class="carousel-indicators hidden-lg">
   <li data-target="#casino-banner" data-slide-to="0" class="active"></li>
   <li data-target="#casino-banner" data-slide-to="1"></li>
   <li data-target="#casino-banner" data-slide-to="2"></li>
   <li data-target="#casino-banner" data-slide-to="3"></li>
   <li data-target="#casino-banner" data-slide-to="4"></li>
-</ol>
+</ol> -->
 <!-- Wrapper for slides -->
 <div class="carousel-inner" role="listbox">
   <div class="item active pirate-reg">
@@ -15,20 +15,20 @@
     <div class="carousel-caption">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-8">
+          <div class="col-xs-12 col-sm-12 col-md-9">
             <div class="slide-wrap">
               <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-6">
+                <div class="col-xs-12 col-sm-9 col-md-5">
                   <div class="slide-bonus">
                     <span class="slide-bonus__first-line">10$</span>
                     <span class="slide-bonus__second-line">без депозита</span>
                     <span class="slide-bonus__third-line">- за регистрацию -</span>
                     <a class="ds-link" data-toggle="modal" data-target="#modalRules">Подробнее</a>
-                    <button class="btn btn-danger btn-full-width btn-mobile-reg hidden-sm hidden-md hidden-lg" type="button" data-toggle="modal" data-target="#modalReg">Регистрация</button>
+                    <button class="btn btn-danger btn-full-width btn-mobile-reg hidden-md hidden-lg" type="button" data-toggle="modal" data-target="#modalReg">Регистрация</button>
                   </div>
                 </div>
 
-                <div class="col-xs-7 col-sm-5 col-md-6 hidden-xs">
+                <div class="col-xs-7 col-sm-6 col-md-6 col-md-offset-1 col-sm-offset-1 hidden-xs hidden-sm">
 
                   <!-- Form registraion -->
               		<script>
@@ -78,7 +78,7 @@
     <div class="carousel-caption">
       <div class="container">
         <div class="row">
-          <div class="col-xs-10 col-sm-7 col-md-6 registration-bonusWrap">
+          <div class="col-xs-12 col-sm-12 col-md-6 registration-bonusWrap">
 
             <div class="registration-bonus">
               <div class="registration-bonus-content">
@@ -86,7 +86,7 @@
                 <h3 class="registration-bonus__underheader">Приветственный бонус</h3>
                 <span class="registration-bonus__count">1800$</span>
                 <a href="bonus.html" class="ds-link">Подробнее</a>
-                <button class="btn btn-secondary btn-secondary-full btn-full-width btn-mobile-reg hidden-sm hidden-md hidden-lg" type="button" data-toggle="modal" data-target="#modalReg">Регистрация</button>
+                <button class="btn btn-secondary btn-secondary-full btn-full-width btn-mobile-reg hidden-md hidden-lg" type="button" data-toggle="modal" data-target="#modalReg">Регистрация</button>
               </div>
 
               <div class="registration-bonus-pers">
@@ -96,7 +96,7 @@
 
           </div>
 
-          <div class="col-sm-5 col-md-4 col-md-offset-2 hidden-xs">
+          <div class="col-sm-5 col-md-4 col-md-offset-2 hidden-xs hidden-sm">
             <div class="tiger-reg-form">
 
               <!-- Form registraion -->
