--- a/free-spins.html
+++ b/free-spins.html
@@ -11,7 +11,7 @@
 	<script src="js/jquery-2.0.0.min.js"></script>
 
 </head>
-<body>
+<body class="user-authorized">
 
 	<!-- Header insertion -->
 	<script>
@@ -38,7 +38,7 @@
 					<div class="col-xs-12 col-sm-7">
 						<div class="free-spins__header-wrapper">
 							<h2 class="free-spins__header">Бонусные фриспины по четвергам</h2>
-							<p class="free-spins__underheader-text">Внесите депозит от 20$ и получите бесплатные вращаения в игре Jack and the Beanstalk. Проведите четверг с DarkSlot и насладитесь атмосферой нашего казино. Так же не забывайте,  что для каждого игрока действует <a href="reload-bonus.html">Reload bonus</a>, который можно получить один раз в любой день недели.</p>
+							<p class="free-spins__underheader-text">Внесите депозит от 20$ и получите бесплатные вращаения в игре Jack and the Beanstalk. Проведите четверг с DarkSlot и насладитесь атмосферой нашего казино. Так же не забывайте, что для каждого игрока действует <a href="reload-bonus.html">Reload bonus</a>, который можно получить один раз в любой день недели.</p>
 						</div>
 
 						<button class="btn btn-danger btn-wide" data-toggle="modal" data-target="#modalRules">Правила и условия</button>
@@ -89,7 +89,7 @@
 
 				<div class="row">
 					<div class="col-sm-offset-1 col-sm-10">
-						<p class="statistics__text">Данное бонусное предложение доступно только для клиентов  "DARK SLOT". Акция проводится по (День недели) с 01:00 до 23:59 (МСК). Для  участия в акции, необходимо пополнить счет не менее чем на 20$, фри спины будут начислены на счет моментально. Каждый игрок Darkslot может принять участие в акции только один раз на протяжении четверга. Бонус доступен только для одного игрового счета, человека, семью, компьютер или IP-адрес. При подозрении о нарушениях путем множественных регистраций (поддельные счета) все бонусные средства и реальные будут аннулированы. Принимая бонус, клиент соглашается с бонусными условиями, а также с общими правилами и положениями "DARK SLOT", опубликованными на сайте Darkslot.com.</p>
+						<p class="statistics__text">Данное бонусное предложение доступно только для клиентов  "DARK SLOT". Акция проводится по четвергам с 01:00 до 23:59 (МСК). Для  участия в акции, необходимо пополнить счет не менее чем на 20$, фри спины будут начислены на счет моментально. Каждый игрок Darkslot может принять участие в акции только один раз на протяжении четверга. Бонус доступен только для одного игрового счета, человека, семью, компьютер или IP-адрес. При подозрении о нарушениях путем множественных регистраций (поддельные счета) все бонусные средства и реальные будут аннулированы. Принимая бонус, клиент соглашается с бонусными условиями, а также с общими правилами и положениями "DARK SLOT", опубликованными на сайте Darkslot.com.</p>
 					</div>
 				</div>
 			</div>
