--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -11,7 +11,8 @@
 	<script src="js/jquery-2.0.0.min.js"></script>
 
 </head>
-<body class="page-home">
+<!-- Класс user-unAuthorized заменить на user-authorized для состояния авторизованного пользователя -->
+<body class="page-home user-authorized">
 
 	<!-- Header insertion -->
 	<script>
