--- a/live-casino.html
+++ b/live-casino.html
@@ -13,13 +13,13 @@
 	<script src="js/jquery-2.0.0.min.js"></script>
 
 </head>
-<body>
+<body class="user-authorized">
 
 	<!-- Header insertion -->
 	<script>
 		$(document).ready(function(){
 		 	$('#ds-header').load('./_header.html');
-		}); 
+		});
 	</script>
 	<div id="ds-header"></div>
 	<!-- End Header insertion -->
