--- a/policy.html
+++ b/policy.html
@@ -12,7 +12,7 @@
 	<script src="js/jquery-2.0.0.min.js"></script>
 
 </head>
-<body>
+<body class="user-authorized">
 
 	<!-- Header insertion -->
 	<script>
@@ -30,7 +30,7 @@
 				<div class="col-xs-12">
 					<h1 >Политика конфиденциальности</h1>
 					<div class="rules-wrap" id="rules-wrap">
-						
+
 						<div class="rules">
 							<ul class="rules__list">
 								<li class="rules__list-item">1. Игрок признает и подтверждает обоснованность действий казино DARKSLOT.com при запросе персональных данных игрока, необходимых для доступа к сайту, а также, для обеспечения игроку безопасного и максимально комфортного использования игр.</li>
