--- a/_header.html
+++ b/_header.html
@@ -1,8 +1,7 @@
 <header class="header">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
-			<!-- Класс user-unAuthorized заменить на user-authorized для состояния авторизованного пользователя -->
-			<div class="header-wrap user-unAuthorized">
+			<div class="header-wrap">
 
 				<div class="navbar-header">
 					<button style="float: none;" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar-collapse" aria-expanded="false">
