--- a/levels.html
+++ b/levels.html
@@ -13,7 +13,7 @@
 	<script src="js/jquery-2.0.0.min.js"></script>
 
 </head>
-<body>
+<body class="user-authorized">
 
 	<!-- Header insertion -->
 	<script>
