--- a/_carousel.html
+++ b/_carousel.html
@@ -18,7 +18,7 @@
           <div class="col-xs-12 col-sm-12 col-md-9 user-authorized-false">
             <div class="slide-wrap">
               <div class="row">
-                <div class="col-xs-12 col-sm-9 col-md-5">
+                <div class="col-xs-12 col-sm-9 col-md-5 user-authorized-false">
                   <div class="slide-bonus">
                     <span class="slide-bonus__first-line">10$</span>
                     <span class="slide-bonus__second-line">без депозита</span>
@@ -28,7 +28,7 @@
                   </div>
                 </div>
 
-                <div class="col-xs-7 col-sm-6 col-md-6 col-md-offset-1 col-sm-offset-1 hidden-xs hidden-sm">
+                <div class="col-xs-7 col-sm-6 col-md-6 col-md-offset-1 col-sm-offset-1 hidden-xs hidden-sm user-authorized-false">
 
                   <!-- Form registraion -->
               		<script>
@@ -36,7 +36,7 @@
               			 	$('#ds-slide1-form-reg').load('./_form_registration.html');
               			});
               		</script>
-              		<div id="ds-slide1-form-reg user-authorized-false"></div>
+              		<div id="ds-slide1-form-reg"></div>
               		<!-- End Form registraion -->
 
                 </div>
@@ -45,7 +45,7 @@
           </div>
 
           <div class="col-xs-12 col-sm-9 col-md-6 user-authorized-true">
-            <div class="deposit-block">
+            <div class="slide-wrap deposit-block">
               <div class="cashback__text-wrapper">
                 <img src="img/vip-bonus-header.png" alt="" class="cashback__header">
                 <span class="cashback__text">Получите 100% бонусом при депозите 1000$</span>
