--- a/_section-registration.html
+++ b/_section-registration.html
@@ -1,4 +1,4 @@
-<section class="registration tiger-reg">
+<section class="registration tiger-reg user-authorized-false">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -18,7 +18,7 @@
 
       </div>
 
-      <div class="col-md-4 col-md-offset-2">
+      <div class="col-md-5 col-md-offset-1">
         <div class="tiger-reg-form">
 
           <!-- Form registraion -->
