--- a/_section-registration.html
+++ b/_section-registration.html
@@ -1,6 +1,29 @@
+<section class="registration user-authorized-true">
+  <div class="container">
+    <div class="row ">
+      <div class="col-xs-12 col-sm-offset-3 col-sm-6 col-sm-offset-3 registration-bonusWrap ">
+
+        <div class="slide-wrap registration-bonus">
+          <div class="registration-bonus-content">
+            <h3 class="registration-bonus__underheader">Приветственный бонус</h3>
+            <span class="registration-bonus__count">1800$</span>
+            <a href="bonus.html" class="ds-link">Подробнее</a>
+            <button class="btn btn-secondary btn-secondary-full btn-full-width btn-mobile-reg user-authorized-true" style="justify-content: center" type="button">Депозит</button>
+          </div>
+          <div class="registration-bonus-pers">
+            <img src="img/tiger.png" alt="toger" class="registration-bonus-pers-img">
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</section>
+
 <section class="registration tiger-reg user-authorized-false">
   <div class="container">
-    <div class="row">
+    <div class="row ">
       <div class="col-md-6">
 
         <div class="registration-bonus">
@@ -9,6 +32,7 @@
             <h3 class="registration-bonus__underheader">Приветственный бонус</h3>
             <span class="registration-bonus__count">1800$</span>
             <a href="bonus.html" class="ds-link">Подробнее</a>
+            <button class="btn btn-secondary btn-secondary-full btn-full-width user-authorized-true" style="justify-content: center" type="button">Депозит</button>
           </div>
 
           <div class="registration-bonus-pers">
