--- a/_carousel.html
+++ b/_carousel.html
@@ -44,7 +44,7 @@
             </div>
           </div>
 
-          <div class="col-xs-12 col-sm-9 col-md-6 user-authorized-true">
+          <div class="col-xs-12 col-sm-9 col-md-9 user-authorized-true">
             <div class="slide-wrap deposit-block">
               <div class="cashback__text-wrapper">
                 <img src="img/vip-bonus-header.png" alt="" class="cashback__header">
@@ -90,11 +90,15 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 registration-bonusWrap user-authorized-true">
 
-            <div class="slide-wrap deposit-block">
-              <div class="cashback__text-wrapper">
-                <img src="img/vip-bonus-header.png" alt="" class="cashback__header">
-                <span class="cashback__text">Получите 100% бонусом при депозите 1000$</span>
-                <button class="btn btn-danger btn-full-width" type="button">Депозит</button>
+            <div class="slide-wrap registration-bonus">
+              <div class="registration-bonus-content">
+                <h3 class="registration-bonus__underheader">Приветственный бонус</h3>
+                <span class="registration-bonus__count">1800$</span>
+                <a href="bonus.html" class="ds-link">Подробнее</a>
+                <button class="btn btn-secondary btn-secondary-full btn-full-width btn-mobile-reg user-authorized-true" style="justify-content: center" type="button">Депозит</button>
+              </div>
+              <div class="registration-bonus-pers">
+                <img src="img/tiger.png" alt="toger" class="registration-bonus-pers-img">
               </div>
             </div>
 
@@ -107,7 +111,7 @@
                 <h3 class="registration-bonus__underheader">Приветственный бонус</h3>
                 <span class="registration-bonus__count">1800$</span>
                 <a href="bonus.html" class="ds-link">Подробнее</a>
-                <button class="btn btn-secondary btn-secondary-full btn-full-width btn-mobile-reg hidden-md hidden-lg" type="button" data-toggle="modal" data-target="#modalReg">Регистрация</button>
+                <button class="btn btn-secondary btn-secondary-full btn-full-width btn-mobile-reg hidden-md hidden-lg  user-authorized-false" type="button" data-toggle="modal" data-target="#modalReg">Регистрация</button>
               </div>
 
               <div class="registration-bonus-pers">
