--- a/_footer-wrapper.html
+++ b/_footer-wrapper.html
@@ -21,10 +21,10 @@
             <h2 class="games__header">Акции</h2>
             <ul class="games__list">
               <li class="games__item"><a href="bonus.html">Приветственный бонус</a></li>
-              <li class="games__item"><a href="bonus.html#vip-bonus">VIP Bonus</a></li>
+              <li class="games__item"><a href="vip-bonus.html">VIP Bonus</a></li>
               <li class="games__item"><a href="reload-bonus.html">Reload бонус</a></li>
               <li class="games__item"><a href="everyweek-cashback.html">Кэшбек</a></li>
-              <li class="games__item"><a href="everyweek-cashback.html">Live Casino Cashback</a></li>
+              <li class="games__item"><a href="live-casino.html">Live Casino Cashback</a></li>
               <li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
               <li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
               <li class="games__item"><a href="tournament.html">Darkslot турнир</a></li>
@@ -37,6 +37,7 @@
               <li class="games__item games__item--policy" data-toggle="modal" data-target="#modalPolicy">Политика конфиденциальности</li>
               <li class="games__item games__item--rules" data-toggle="modal" data-target="#modalRules">Положения и условия</li>
               <li class="games__item games__item--support" data-toggle="modal" data-target="#modalSupport">Поддержка</li>
+              <li class="games__item"><a href="payments.html">Платежи</a></li>
               <li class="games__item"><a href="partners.html">Партнерам</a></li>
               <li class="games__item"><a href="about.html">О Darkslot</a></li>
             </ul>
