casino-banner bg

--- a/_carousel.html
+++ b/_carousel.html
@@ -10,7 +10,7 @@
 <!-- Wrapper for slides -->
 <div class="carousel-inner" role="listbox">
   <div class="item active pirate-reg">
-    <img src="img/slider-images/slide-lord.png" alt="lord">
+    <!-- <img src="img/slider-images/slide-lord.png" alt="lord"> -->
 
     <div class="carousel-caption">
       <div class="container">
@@ -59,7 +59,7 @@
   </div>
 
   <div class="item">
-    <img src="img/slider-images/slide-viking.png" alt="viking">
+    <!-- <img src="img/slider-images/slide-viking.png" alt="viking"> -->
     <div class="">
 
       <div class="slide__wrapper">
@@ -73,7 +73,7 @@
   </div>
 
   <div class="item">
-    <img src="img/slider-images/day-slot.jpg" alt="day slot">
+    <!-- <img src="img/slider-images/day-slot.jpg" alt="day slot"> -->
     <div class="carousel-caption">
 
       <div class="slide__button-wrapper">
@@ -83,7 +83,7 @@
   </div>
 
   <div class="item tiger-reg">
-    <img src="img/slider-images/slide-wood.png" alt="wood">
+    <!-- <img src="img/slider-images/slide-wood.png" alt="wood"> -->
 
     <div class="carousel-caption">
       <div class="container">
@@ -140,7 +140,7 @@
   </div>
 
   <div class="item">
-    <img src="img/slider-images/free-spins.png" alt="free spins">
+    <!-- <img src="img/slider-images/free-spins.png" alt="free spins"> -->
     <div class="carousel-caption">
 
       <div class="slide__button-wrapper">
