casino-banner   authorized-true

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <!-- Класс user-unAuthorized заменить на user-authorized для состояния авторизованного пользователя -->
-<body class="page-home user-authorized">
+<body class="page-home user-unAuthorized">
 
 	<!-- Header insertion -->
 	<script>
