casino-banner   unAuthorized-true

--- a/_carousel.html
+++ b/_carousel.html
@@ -15,10 +15,10 @@
     <div class="carousel-caption">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-9 user-authorized-false">
+          <div class="col-xs-offset-2 col-xs-6 col-sm-offset-0 col-sm-7 col-md-8 user-authorized-false">
             <div class="slide-wrap">
               <div class="row">
-                <div class="col-xs-12 col-sm-9 col-md-5 user-authorized-false">
+                <div class="col-xs-12 col-sm-9 col-md-5 user-authorized-false" style="justify-content: flex-end;">
                   <div class="slide-bonus">
                     <span class="slide-bonus__first-line">10$</span>
                     <span class="slide-bonus__second-line">без депозита</span>
@@ -28,7 +28,7 @@
                   </div>
                 </div>
 
-                <div class="col-xs-7 col-sm-6 col-md-6 col-md-offset-1 col-sm-offset-1 hidden-xs hidden-sm user-authorized-false">
+                <div class="col-xs-7 col-sm-offset-1 col-sm-6 col-md-offset-0 col-md-7 hidden-xs hidden-sm pirate-reg-wrap user-authorized-false">
 
                   <!-- Form registraion -->
               		<script>
@@ -120,7 +120,7 @@
             </div>
           </div>
 
-          <div class="col-sm-5 col-md-5 col-md-offset-1 hidden-xs hidden-sm user-authorized-false">
+          <div class="col-sm-5 col-md-5 col-md-offset-1 hidden-xs hidden-sm tiger-reg-wrap user-authorized-false">
             <div class="tiger-reg-form">
 
               <!-- Form registraion -->
