--- a/_carousel.html
+++ b/_carousel.html
@@ -111,7 +111,7 @@
                 <h3 class="registration-bonus__underheader">Приветственный бонус</h3>
                 <span class="registration-bonus__count">1800$</span>
                 <a href="bonus.html" class="ds-link">Подробнее</a>
-                <button class="btn btn-secondary btn-secondary-full btn-full-width btn-mobile-reg hidden-md hidden-lg  user-authorized-false" type="button" data-toggle="modal" data-target="#modalReg">Регистрация</button>
+                <button class="btn btn-secondary btn-secondary-full btn-full-width btn-mobile-reg hidden-md hidden-lg  user-authorized-false" style="justify-content: center;" type="button" data-toggle="modal" data-target="#modalReg">Регистрация</button>
               </div>
 
               <div class="registration-bonus-pers">
